Remove non-working JVM args to the maven-tomcat6-plugin.
http://stackoverflow.com/questions/11928689/increase-memory-of-tomcat7-maven-plugin