@@ -142,9 +142,6 @@
 						<phase>pre-integration-test</phase>
 						<configuration>
 							<fork>true</fork>
-							<systemProperties>
-								<JAVA_OPTS>-Xmx1024m -XX:MaxPermSize=256m</JAVA_OPTS>
-							</systemProperties>
 							<contextFile>${basedir}/src/test/context/pivot4j.xml</contextFile>
 						</configuration>
 					</execution>
